# PyQtBindingsExample

./: pyproject.toml
sip/: ExampleBindings.sip
